[package]
name = "bevy_basic_portals"
version = "0.10.0"
edition = "2024"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["bevy", "portal", "mirror", "gamedev"]
description = "A portal plugin for Bevy game engine"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Selene-Amanita/bevy_basic_portals"
authors = ["Selene Amanita"]

[dependencies]
bevy_app = "0.18"
bevy_asset = "0.18"
bevy_camera = "0.18"
bevy_color = "0.18"
bevy_core_pipeline = "0.18"
bevy_ecs = "0.18"
bevy_image = { version = "0.18", features = ["zstd_rust"] }
bevy_math = "0.18"
bevy_mesh = "0.18"
bevy_pbr = "0.18"
bevy_picking = { version = "0.18", optional = true }
bevy_reflect = "0.18" # Could potentially be under a feature?
bevy_render = "0.18"
bevy_shader = "0.18"
bevy_transform = "0.18"
bevy_window = "0.18"
tracing = { version = "0.1", default-features = false, features = ["std"] } # From bevy_utils
uuid = { version = "1.11.0", features = ["v4"], optional = true }
# All of the above can be replaced by:
# bevy = { version = "0.18", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_pbr", "bevy_render", ] }

[features]
default = ["picking_backend"]
picking_backend = ["dep:bevy_picking", "dep:uuid"]

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_gilrs",
    "mesh_picking",
    "bevy_window",
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2"
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
